--- a/TaggerAppBE/appsettings.Development.json
+++ b/TaggerAppBE/appsettings.Development.json
@@ -5,5 +5,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "JwtSecret": "Tagger-App-Secret"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DawDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
