--- a/TaggerAppBE/appsettings.json
+++ b/TaggerAppBE/appsettings.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "AppSettings": {
+    "JwtSecret": "Tagger-App-Secret"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DawDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
